Unskip l2-resource-option-replacement-trigger (#2140)
The replacementTrigger method now exists on
CustomResourceOptions.Builder, so this test passes without changes.